--- a/test/scripts/Dockerfile
+++ b/test/scripts/Dockerfile
@@ -3,7 +3,8 @@ FROM $IMAGE
 
 ENV OPENSSL_STATIC=1 \
     OPENSSL_LIB_DIR=/usr/lib/x86_64-linux-gnu \
-    OPENSSL_INCLUDE_DIR=/usr/include/openssl
+    OPENSSL_INCLUDE_DIR=/usr/include/openssl \
+    TEST_MANAGER_STATIC=1
 
 RUN rustup target add x86_64-pc-windows-gnu
 
