--- a/.github/workflows/android-app.yml
+++ b/.github/workflows/android-app.yml
@@ -114,7 +114,7 @@ jobs:
         uses: actions/cache@v4
         id: cache-relay-list
         with:
-          path: build/relays.json
+          path: android/app/build/extraAssets/relays.json
           key: relay-list-${{ steps.get-date.outputs.date }}
 
       - name: Checkout repository
@@ -128,14 +128,14 @@ jobs:
         env:
           RUSTFLAGS: --deny warnings
         run: |
-          mkdir -p build
-          cargo run --bin relay_list > build/relays.json
+          mkdir -p android/app/build/extraAssets
+          cargo run --bin relay_list > android/app/build/extraAssets/relays.json
 
       - name: Upload
         uses: actions/upload-artifact@v4
         with:
           name: relay-list
-          path: build/relays.json
+          path: android/app/build/extraAssets/relays.json
           if-no-files-found: error
           retention-days: 7
 
@@ -313,7 +313,7 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: relay-list
-          path: build
+          path: android/app/build/extraAssets/relays.json
 
       - name: Build app
         uses: burrunan/gradle-cache-action@v1
