--- a/.github/workflows/android-app.yml
+++ b/.github/workflows/android-app.yml
@@ -469,7 +469,7 @@ jobs:
 
   instrumented-e2e-tests:
     name: Run instrumented e2e tests
-    runs-on: [self-hosted, android-device, android-runner-v1] # Temporary until we can add secrets
+    runs-on: [self-hosted, android-device, android-emulator] # Temporary until we can add secrets
     if: github.event_name == 'schedule' || github.event.inputs.run_e2e_tests == 'true'
     timeout-minutes: 30
     needs: [build-app, build-instrumented-tests]
