--- a/.github/workflows/android-app.yml
+++ b/.github/workflows/android-app.yml
@@ -313,7 +313,7 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: relay-list
-          path: android/app/build/extraAssets/relays.json
+          path: android/app/build/extraAssets
 
       - name: Build app
         uses: burrunan/gradle-cache-action@v1
