--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -106,7 +106,7 @@
             <meta-data android:name="android.support.FILE_PROVIDER_PATHS"
                        android:resource="@xml/provider_paths" />
         </provider>
-        <receiver android:name=".broadcastreceiver.LocaleChangedBroadcastReceiver"
+        <receiver android:name=".receiver.LocaleChangedBroadcastReceiver"
                   android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.LOCALE_CHANGED" />
