--- a/.github/workflows/android-app.yml
+++ b/.github/workflows/android-app.yml
@@ -488,7 +488,7 @@ jobs:
     name: Run instrumented e2e tests
     # Temporary workaround for targeting the runner android-runner-v1
     runs-on: [self-hosted, android-device, android-emulator]
-    if: github.event_name == 'schedule' || ${{ github.event.inputs.e2e_test_repeat }} != '0'
+    if: (github.event_name == 'schedule' || github.event.inputs.e2e_test_repeat != '0') && github.event_name != 'pull_request'
     needs: [build-app, build-instrumented-tests]
     strategy:
       matrix:
