--- a/.github/workflows/ios-end-to-end-tests-settings-migration.yml
+++ b/.github/workflows/ios-end-to-end-tests-settings-migration.yml
@@ -5,23 +5,34 @@ concurrency:
   cancel-in-progress: false
 permissions:
   contents: read
+  issues: write
+  pull-requests: write
 on:
-  workflow_dispatch:
+  workflow_dispatch: null
   schedule:
-    # At midnight every day.
-    # Notifications for scheduled workflows are sent to the user who last modified the cron
-    # syntax in the workflow file. If you update this you must have notifications for
-    # Github Actions enabled, so these don't go unnoticed.
-    # https://docs.github.com/en/actions/monitoring-and-troubleshooting-workflows/notifications-for-workflow-runs
-    - cron: '0 0 * * *'
+    - cron: 0 0 * * *
 env:
   TEST_DEVICE_UDID: 00008130-0019181022F3803A
+  OLD_APP_COMMIT_HASH: 895b7d98825e678f5d7023d5ea3c9b7beee89280
 jobs:
-  test:
-    name: Settings migration end to end tests
-    runs-on: [self-hosted, macOS, ios-test]
-    env:
-      OLD_APP_COMMIT_HASH: 895b7d98825e678f5d7023d5ea3c9b7beee89280
+  checkout_old_version:
+    name: Checkout Old Repository Version
+    runs-on:
+      - self-hosted
+      - macOS
+      - ios-test
+    steps:
+      - name: Checkout old repository version
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ env.OLD_APP_COMMIT_HASH }}
+  configure_rust:
+    name: Configure Rust
+    runs-on:
+      - self-hosted
+      - macOS
+      - ios-test
+    needs: checkout_old_version
     steps:
       - name: Configure Rust
         uses: actions-rs/toolchain@v1.0.6
@@ -29,98 +40,46 @@ jobs:
           toolchain: stable
           override: true
           target: aarch64-apple-ios
-
-      - name: Uninstall app
+  uninstall_app:
+    name: Uninstall Old App
+    runs-on:
+      - self-hosted
+      - macOS
+      - ios-test
+    needs: checkout_old_version
+    steps:
+      - name: Uninstall old app
         timeout-minutes: 5
-        run: ios-deploy --id ${{ env.TEST_DEVICE_UDID }} --uninstall_only --bundle_id net.mullvad.MullvadVPN
-
-      - name: Checkout old repository version
-        uses: actions/checkout@v4
-        with:
-          ref: ${{ env.OLD_APP_COMMIT_HASH }}
-
-      - name: Change DNS settings on old app version
-        uses: ./.github/actions/ios-end-to-end-tests
-        with:
-          ios_device_pin_code: ${{ secrets.IOS_DEVICE_PIN_CODE }}
-          test_device_identifier_uuid: ${{ secrets.IOS_TEST_DEVICE_IDENTIFIER_UUID }}
-          has_time_account_number: ${{ secrets.IOS_HAS_TIME_ACCOUNT_NUMBER_PRODUCTION }}
-          no_time_account_number: ${{ secrets.IOS_NO_TIME_ACCOUNT_NUMBER_PRODUCTION }}
-          test_device_udid: ${{ env.TEST_DEVICE_UDID }}
-          xcode_test_plan: 'MullvadVPNUITestsChangeDNSSettings'
-          partner_api_token: ${{ secrets.STAGEMOLE_PARTNER_AUTH }}
-
-      - name: Store test report for changing DNS settings
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: test-report-change-dns-settings
-          path: ios/test-report/junit.xml
-
-      - name: Checkout repository to get the current app version
-        uses: actions/checkout@v4
-
-      - name: Verify DNS settings still changed on current app version
-        uses: ./.github/actions/ios-end-to-end-tests
-        if: always()
-        with:
-          ios_device_pin_code: ${{ secrets.IOS_DEVICE_PIN_CODE }}
-          test_device_identifier_uuid: ${{ secrets.IOS_TEST_DEVICE_IDENTIFIER_UUID }}
-          has_time_account_number: ${{ secrets.IOS_HAS_TIME_ACCOUNT_NUMBER_PRODUCTION }}
-          no_time_account_number: ${{ secrets.IOS_NO_TIME_ACCOUNT_NUMBER_PRODUCTION }}
-          test_device_udid: ${{ env.TEST_DEVICE_UDID }}
-          partner_api_token: ${{ secrets.STAGEMOLE_PARTNER_AUTH }}
-          xcode_test_plan: 'MullvadVPNUITestsVerifyDNSSettingsChanged'
-
-      - name: Store test report for verifying DNS settings
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: test-report-verify-dns-settings
-          path: ios/test-report/junit.xml
-
-      - name: Checkout old repository version
-        uses: actions/checkout@v4
-        with:
-          ref: ${{ env.OLD_APP_COMMIT_HASH }}
-
-      - name: Change all other settings on old app version
-        uses: ./.github/actions/ios-end-to-end-tests
-        if: always()
-        with:
-          ios_device_pin_code: ${{ secrets.IOS_DEVICE_PIN_CODE }}
-          test_device_identifier_uuid: ${{ secrets.IOS_TEST_DEVICE_IDENTIFIER_UUID }}
-          has_time_account_number: ${{ secrets.IOS_HAS_TIME_ACCOUNT_NUMBER_PRODUCTION }}
-          no_time_account_number: ${{ secrets.IOS_NO_TIME_ACCOUNT_NUMBER_PRODUCTION }}
-          test_device_udid: ${{ env.TEST_DEVICE_UDID }}
-          partner_api_token: ${{ secrets.STAGEMOLE_PARTNER_AUTH }}
-          xcode_test_plan: 'MullvadVPNUITestsChangeSettings'
-
-      - name: Store test report for changing all settings
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: test-report-change-all-other-settings
-          path: ios/test-report/junit.xml
-
-      - name: Checkout repository to get the current app version
-        uses: actions/checkout@v4
-
-      - name: Verify all other settings still changed on current app version
-        uses: ./.github/actions/ios-end-to-end-tests
-        if: always()
-        with:
-          ios_device_pin_code: ${{ secrets.IOS_DEVICE_PIN_CODE }}
-          test_device_identifier_uuid: ${{ secrets.IOS_TEST_DEVICE_IDENTIFIER_UUID }}
-          has_time_account_number: ${{ secrets.IOS_HAS_TIME_ACCOUNT_NUMBER_PRODUCTION }}
-          no_time_account_number: ${{ secrets.IOS_NO_TIME_ACCOUNT_NUMBER_PRODUCTION }}
-          test_device_udid: ${{ env.TEST_DEVICE_UDID }}
-          partner_api_token: ${{ secrets.STAGEMOLE_PARTNER_AUTH }}
-          xcode_test_plan: 'MullvadVPNUITestsVerifySettingsChanged'
-
-      - name: Store test report for verifying all other settings
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: test-report-verify-all-other-settings
-          path: ios/test-report/junit.xml
+        run: ios-deploy --id ${{ env.TEST_DEVICE_UDID }} --uninstall_only --bundle_id
+          net.mullvad.MullvadVPN
+  change_dns_settings:
+    name: Change DNS Settings on Old App Version
+    needs:
+      - checkout_old_version
+      - configure_rust
+      - uninstall_app
+    uses: mullvad/mullvadvpn-app/.github/workflows/ios-end-to-end-tests.yml@main
+    with:
+      arg_tests_json_key: "MullvadVPNUITestsChangeDNSSettings"
+    secrets: inherit
+  verify_dns_settings:
+    name: Verify DNS Settings Still Changed on Current App Version
+    needs: change_dns_settings
+    uses: mullvad/mullvadvpn-app/.github/workflows/ios-end-to-end-tests.yml@main
+    with:
+      arg_tests_json_key: "MullvadVPNUITestsVerifyDNSSettingsChanged"
+    secrets: inherit
+  change_other_settings:
+    name: Change All Other Settings on Old App Version
+    needs: verify_dns_settings
+    uses: mullvad/mullvadvpn-app/.github/workflows/ios-end-to-end-tests.yml@main
+    with:
+      arg_tests_json_key: "MullvadVPNUITestsChangeSettings"
+    secrets: inherit
+  verify_other_settings:
+    name: Verify All Other Settings Still Changed on Current App Version
+    needs: change_other_settings
+    uses: mullvad/mullvadvpn-app/.github/workflows/ios-end-to-end-tests.yml@main
+    with:
+      arg_tests_json_key: "MullvadVPNUITestsVerifySettingsChanged"
+    secrets: inherit
