--- a/.github/workflows/ios-end-to-end-tests-settings-migration.yml
+++ b/.github/workflows/ios-end-to-end-tests-settings-migration.yml
@@ -64,7 +64,7 @@ jobs:
     uses: ./.github/workflows/ios-end-to-end-tests.yml
     with:
       arg_tests_json_key: "MullvadVPNUITestsChangeDNSSettings"
-      commit_hash : ${{ env.OLD_APP_COMMIT_HASH }}
+      commit_hash: env.OLD_APP_COMMIT_HASH
     secrets: inherit
   verify_dns_settings:
     name: Verify DNS Settings Still Changed on Current App Version
@@ -79,7 +79,7 @@ jobs:
     uses: ./.github/workflows/ios-end-to-end-tests.yml
     with:
       arg_tests_json_key: "MullvadVPNUITestsChangeSettings"
-      commit_hash : ${{ env.OLD_APP_COMMIT_HASH }}
+      commit_hash: env.OLD_APP_COMMIT_HASH
     secrets: inherit
   verify_other_settings:
     name: Verify All Other Settings Still Changed on Current App Version
